--- a/style.css
+++ b/style.css
@@ -1,36 +1,44 @@
 body {
-    margin-left: 184px;
+  margin-left: 184px;
+
 }
-.form-control.is-invalid{
-    background-image: none;
+.form-control.is-invalid {
+  background-image: none;
 }
 .error50 {
-   
-        background-color: rgb(233, 199, 199);
-        color: #A94442;
-        margin-left: 3.5vw;
-        /* margin-top: 1vh; */
-        font-size: 16px;
-        border-radius: 4px;
-        padding: 1vh 0;
-        width:  180px;
-        height: 33px;
-        margin-left: 105px;
-        padding: 5px;
-       
-color: #A94442
-        ;
+  background-color: rgb(233, 199, 199);
+  color: #A94442;
 
-        
+  font-size: 14px;
+  border-radius: 4px;
+  width: 170px;
+  height: 25px;
+  margin-left: 168px;
+ padding: 2px 6px;
+  background-color: #EBCCCC;
 }
 .checkbox {
-    font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 24px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
 }
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.save {
+    margin: 6px;
+    color: #373A3C;
+}
+.fibOf{
+    font-size: 24px;
+}
+.border-bottom {
+  width: 1008px;
+size: 24px
+}
+.mySelect {
+  background-color: #E6E6E6;
 }
