--- a/style.css
+++ b/style.css
@@ -1,21 +1,20 @@
 body {
   margin-left: 184px;
-
 }
 .form-control.is-invalid {
   background-image: none;
 }
 .error50 {
   background-color: rgb(233, 199, 199);
-  color: #A94442;
+  color: #a94442;
 
   font-size: 14px;
   border-radius: 4px;
   width: 170px;
   height: 25px;
   margin-left: 168px;
- padding: 2px 6px;
-  background-color: #EBCCCC;
+  padding: 2px 6px;
+  background-color: #ebcccc;
 }
 .checkbox {
   font-style: normal;
@@ -29,16 +28,16 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0;
 }
 .save {
-    margin: 6px;
-    color: #373A3C;
+  margin: 6px;
+  color: #373a3c;
 }
-.fibOf{
-    font-size: 24px;
+.fibOf {
+  font-size: 24px;
 }
 .border-bottom {
   width: 1008px;
-size: 24px
+  size: 24px;
 }
 .mySelect {
-  background-color: #E6E6E6;
+  background-color: #e6e6e6;
 }
